--- a/source/Application/Application.csproj
+++ b/source/Application/Application.csproj
@@ -1,11 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Common\Services\" />
     <Folder Include="Controllers\" />
     <Folder Include="ViewModels\" />
     <Folder Include="wwwroot\js\" />
@@ -19,6 +18,10 @@
     </PackageReference>
     <PackageReference Include="Markdig" Version="0.22.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Data\Data.csproj" />
   </ItemGroup>
 
 </Project>
