--- a/.gitignore
+++ b/.gitignore
@@ -349,3 +349,4 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 source/Application/appsettings.json
+source/Application/Common/Services/AdminInitializer.cs
