--- a/source/Application/appsettings.Development.json
+++ b/source/Application/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
 	"SqlConnection": {
-		"Server": "(localdb)\\MSSQLLocalDB",
-		"Database": "Portfolio-Blog",
+		"Server": "Server=(localdb)\\MSSQLLocalDB",
+		"Database": "Database=Portfolio-Blog",
 		"Security": "Trusted_Connection=true",
 		"Options": "MultipleActiveResultSets=true"
 	},
